# 3D-CNN

./: README.md
Pre-process/ITK/Rotation/: CMakeLists.txt  Rotation3Dim.cxx
Pre-process/Matlab/: Crop.m  H5Data.m
Test/Matlab/: Test_Model_Classification.m  Test_Model_Den&Seg.m
Train/Classification/: start_train.sh  train.prototxt
Train/Denoising/: train.prototxt
Train/Segmentation/: solver.prototxt  train.prototxt
Train/Transfer_Learning/: Classification.list  deploy.prototxt  solver.prototxt  start_train.sh  train.prototxt
Train/Transfer_Learning/snapshot/: HVSMR_iter_104.caffemodel  HVSMR_iter_104.solverstate
Train/Transfer_Learning/training_log/: caffe.INFO  caffe.localhost.localdomain.mpassa.log.INFO.20200219-125804.28727
